platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/traces/probe.exams-curated-exam02-v1.exams-exam02-ft_bubblesort/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/datasets/exercises/exams/exam02/ft_bubblesort/tests/main.c: In function 'main':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/datasets/exercises/exams/exam02/ft_bubblesort/tests/main.c:17:18: error: implicit declaration of function 'atoi' [-Werror=implicit-function-declaration]
   17 |         arr[i] = atoi(argv[i + 1]);
      |                  ^~~~
cc1: all warnings being treated as errors
